--- a/config/database.yml
+++ b/config/database.yml
@@ -19,7 +19,8 @@ test:
   timeout: 5000
 
 production:
-  adapter: sqlite3
-  database: db/production.sqlite3
+  adapter: sqlite3 #postgres
+  #encoding: unicode
+  database: db/production.sqlite3 #wm_production
   pool: 5
   timeout: 5000
