--- a/config/database.yml
+++ b/config/database.yml
@@ -4,9 +4,12 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: sqlite3
-  database: db/development.sqlite3
-  pool: 5
+  adapter: postgresql
+  encoding: unicode
+  database: adt_development
+  username: adt_user
+  password: aiddata
+  pool: 500
   timeout: 5000
 
 # Warning: The database defined as "test" will be erased and
