--- a/.gitignore
+++ b/.gitignore
@@ -24,11 +24,15 @@
 # Ignore all logfiles and tempfiles.
 /log
 /tmp
+/spec/log/
 
 # Ignore sensitive info
 /config/app_config.yml
 /config/omniauth_config.yml
 /config/secrets.rb
+
+#binstubs
+/bin
 
 
 #And rvmrc files
