--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -1,17 +1,20 @@
 production:
   solr:
+    solr_home: solr
     hostname: localhost
     port: 8983
     log_level: WARNING
 
 development:
   solr:
+    solr_home: solr
     hostname: localhost
     port: 8982
     log_level: INFO
 
 test:
   solr:
+    solr_home: solr
     hostname: localhost
     port: 8981
     log_level: WARNING
