--- a/config/database.yml
+++ b/config/database.yml
@@ -11,6 +11,7 @@ development:
   password: aiddata
   pool: 500
   timeout: 5000
+  host: localhost
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
