--- a/config/database.yml
+++ b/config/database.yml
@@ -4,8 +4,10 @@
 #   Ensure the SQLite 3 gem is defined in your Gemfile
 #   gem 'sqlite3'
 development:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
+  postgis_extension: true
+  schema_search_path: public,postgis
   database: adt_development
   username: adt_user
   password: aiddata
@@ -23,8 +25,10 @@ test:
   timeout: 5000
 
 staging:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
+  postgis_extension: true
+  schema_search_path: public,postgis
   database: adt_staging
   username: adt_user
   password: aiddata
@@ -32,8 +36,10 @@ staging:
   timeout: 5000
 
 production:
-  adapter: postgresql
+  adapter: postgis
   encoding: unicode
+  postgis_extension: true
+  schema_search_path: public,postgis
   database: adt_production
   username: adt_user
   password: aiddata
