--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,9 @@
 #Ignore file storage
 public/system/
 
+# Ignore people images
+app/assets/images/people
+
 # Ignore the default SQLite database.
 /db/*.sqlite3
 
